1.2.6 (17.06.2014):

* Fix support for tesseract 3.02, broken by commit ae76b3cf.
* Changed 'save text' to extract plain text from hOCR output
* + 'save hOCR', to save hOCR output, where available.
* Fixed logic of automatic selection of blank or dark pages.


1.2.5 (17.05.2014):

* Fix today button on date dialog saving PDF
  Closes bug #171 "Today" button in calendar jumps to February 1th, 1970
* Fix resolution when processing non-standard sized images with unpaper
* Speed up downsample option by using imagemagick sample instead of resize
* Remove unnecessary decode_utf8() call causing
  'Cannot decode string with wide characters' error in Perl 5.18.
* Add support for tesseract 3.03.
  Closes bug #173 "v1.2.4 doesn't display any output"
* Fix bug writing images with quotes in filename
  Closes bug #174 "Fail to save file when target folder has quote in filename"
* Fix setting options which don't cause a reload.
  Closes bug #168 (Resolution Errors on Multiple Scanners)
  Closes bug #170 (Format A2 in PDF properties despite having chosen A4 while scanning)
  Closes Debian bug #742233 (wrong resolution)
  Closes LP: #1304484 (resolution incorrect, saved pdf far too large)


1.2.4 (26.03.2014):

* Tie PageRange widgets together
  Closes bug #165 "all or selected? a surprise that can bite like snake" again
* Fix parsing the units of the resolution of imported images.
* Fix infinite loop scanning page 1 when 5+ exist.
* Parse negative progress percentages from scanimage.
* Fix scan dialog if no devices found.


1.2.3 (27.01.2014):

* Deal with crashed sessions with no session file
* Fixed bug setting TMPDIR in preferences
* Added menu item 'Open crashed session'
* Don't process empty lists of pages
  Closes bug #165 "all or selected? a surprise that can bite like snake"


1.2.2 (13.01.2014):

* Fixed paper editor widget
* Fixed position of paper size widget
* Hide geometry widgets at startup if paper selected


1.2.1 (12.01.2014):

* Fixed opening saved sessions